<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/noteDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

    <TextView
        android:id="@+id/noteDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"/>

    <TextView
        android:id="@+id/noteLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"/>
</LinearLayout>
