<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<< HEAD
    android:background="@color/register_bg_color"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="Authentication GeoNotes"
        android:textColor="@color/register_text_color"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="parent"
=======
    android:background="@color/primary"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="146dp"
        android:layout_marginLeft="146dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="145dp"
        android:layout_marginRight="145dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/login_header"
>>>>>>> c7c6292e029c45ad988c4654769b1dd0de45fd46
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:contentDescription="@string/gnplus_logo_content_desc" />

    <TextView
        android:id="@+id/login_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/login_header"
        android:textStyle="bold"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/email_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
<<<<<<< HEAD
=======
        android:background="@color/primary_dark"
>>>>>>> c7c6292e029c45ad988c4654769b1dd0de45fd46
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="10sp"
        android:textSize="14sp"
<<<<<<< HEAD
        android:textStyle="bold|italic"
        android:background="@color/register_edit_bg_color"
        android:textColor="@color/register_edit_text_color"
        android:textColorHint="@color/register_edit_text_hint_color"
=======
>>>>>>> c7c6292e029c45ad988c4654769b1dd0de45fd46
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_header" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
<<<<<<< HEAD
=======
        android:background="@color/primary_dark"
>>>>>>> c7c6292e029c45ad988c4654769b1dd0de45fd46
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textSize="14sp"
<<<<<<< HEAD
        android:textStyle="bold|italic"
        android:background="@color/register_edit_bg_color"
        android:textColor="@color/register_edit_text_color"
        android:textColorHint="@color/register_edit_text_hint_color"
=======
>>>>>>> c7c6292e029c45ad988c4654769b1dd0de45fd46
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_field" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:padding="10sp"
        android:background="@color/primary_light"
        android:textColor="@color/white_transparent"
        android:text="@string/button_login"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field" />

    <TextView
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
<<<<<<< HEAD
        android:text="New Here?Create Account"
        android:textColor="@color/register_text_color"
        android:textStyle="bold|italic"
=======
        android:text="@string/button_create_account"
        android:textColor="#fff"
        android:textSize="16sp"
>>>>>>> c7c6292e029c45ad988c4654769b1dd0de45fd46
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
<<<<<<< HEAD
        android:text="Forgot Password?"
        android:textColor="@color/register_text_color"
        android:textStyle="bold|italic"
=======
        android:text="@string/button_forget_password"
        android:textColor="#fff"
        android:textSize="16sp"
>>>>>>> c7c6292e029c45ad988c4654769b1dd0de45fd46
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_button" />
</androidx.constraintlayout.widget.ConstraintLayout>
